--- a/lib/demo.html
+++ b/lib/demo.html
@@ -1,1 +1,1 @@
-<!doctype html><meta charset="utf-8"><title>xui demo</title><script src="./xui.umd.js"></script><link rel="stylesheet" href="./xui.css"><script>console.log(xui)</script>
+<!doctype html><meta charset="utf-8"><title>zxui demo</title><script src="./zxui.umd.js"></script><link rel="stylesheet" href="./zxui.css"><script>console.log(zxui)</script>
